# time-zone

./: LICENSE  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  tray.rs  windows.rs
src/common/i18n/locales/en/: translation.json
src/common/i18n/locales/zh-Hans/: translation.json
src/windows/: UpdaterWindow.tsx
